# Adaptive-Graph-of-Thoughts-MCP-server

./: .codacy.yaml  .dxtignore  .eslintignore  .gitignore  .pre-commit-config.yaml  Adaptive-Graph-of-Thoughts-MCP-server.dxt  CLAUDE_REQUIREMENTS_ALIGNMENT.md  CLAUDE_SUBMISSION_GUIDE.md  CLAUDE_SUBMISSION_READY.md  CONTRIBUTING.md  DXT_README.md  Dockerfile  FINAL_SUBMISSION_REPORT.md  FINAL_VALIDATION_REPORT.md  GEMINI.md  ISSUES_RESOLVED_REPORT.md  LICENSE  MCP_INSPECTOR_ISSUES.md  MCP_TESTING_PLAN.md  MCP_TESTING_RESULTS.md  PRIVACY_POLICY.md  README.md  ROADMAP.md  SECURITY.md  SUBMISSION_CHECKLIST.md  VALIDATION_REPORT.json  __PLAN_PLACEHOLDER__  adaptive-graph-of-thoughts-v1.0.1-submission.dxt  adaptive-graph-of-thoughts-v1.0.2-final.dxt  config.py  docker-compose.prod.yml  docker-compose.smithery.yml  docker-compose.yml  final_validation.js  index.html  install-dxt.sh  manifest.json  manifest.json.backup  mkdocs.yml  mypy.ini  (+19 more)
.claude/: settings.local.json
.codacy/: codacy.yaml.bak
.devcontainer/: devcontainer.json
.github/workflows/: ci-tests.yml  codacy.yml  codeql.yml  defender-for-devops.yml  gh-pages.yml  mcp_validation.yml  pre-commit.yml
.hypothesis/constants/: 01d8f3e7bac15f74  04d6b2eaa4ad9c00  0c7f44cc75cf6f76  139e5fc12ae76525  18c11926c0536a6e  1deefb05db91b156  22f62b97a801468e  2cb0b1d78972558c  336457e35bb76121  415dd8db42749aaf  50ffb72db13b25b8  67b0a8ccf18bf5d2  7d2df63dccfeae19  8215d2f1cccf8c9e  8414150135675b9a  88c67698327b708e  89d82d5e19c25950  b71c0b6825bbdc20  bf3f8d2027176cd0  d50cdfb92ff7e293  da39a3ee5e6b4b0d  e10f77a6031ee3ec  e3b407c6846a8bb6  e4498841cf598d1d  eaa31deb607ae9b1  eba622ceef7a6ac0  f88bc8de2e8049aa  fcc0e4ea8ec79348
.hypothesis/examples/04e6b3400353b141/: 0911613330fa7f86
.hypothesis/examples/0911613330fa7f86/: 6d804f5efe9c3a15
.md/: CLAUDE_INTEGRATION.md  claude_desktop_integration.md
_site/: 404.html  index.html  sitemap.xml
_site/CONTRIBUTING/: index.html
_site/ROADMAP/: index.html
_site/api/mcp_api/: index.html
_site/configuration/: index.html
_site/extending/custom_stages/: index.html
_site/extending_with_claude/: index.html
_site/getting_started/: index.html
_site/neo4j_indexing/: index.html
_site/search/: search_index.json
_site/setup/neo4j_windows_wsl2_docs/: index.html
_site/status_info/: index.html
_site/testing/testing_strategy_and_example/: index.html
_site/usage/: index.html
agt_setup/: __init__.py  __main__.py
config/: claude_mcp_config.json  config.schema.json  mcp_tools_definition.json  settings.yaml
config/client_configurations/: claude_desktop.json  generic_mcp_client.yaml  vscode.json
database_migrations/: 001_initial_indexes.cypher
docs/: installation_guide.md  mcp_integration.md
docs_src/: CONTRIBUTING.md  claude_action.md  configuration.md  extending_with_claude.md  getting_started.md  index.md  neo4j_indexing.md  status_info.md  usage.md  vscode_extension.md
docs_src/api/: mcp_api.md
docs_src/assets/stylesheets/: custom.css
docs_src/extending/: custom_stages.md
docs_src/testing/: testing_strategy_and_example.md
helm/agot-server/: Chart.yaml  values.yaml
helm/agot-server/templates/: _helpers.tpl  deployment.yaml  service.yaml
integrations/claude-action/: index.js  manifest.json
integrations/vscode-agot/: README.md  extension.ts  package.json  test_extension.test.ts  test_utils.js  tsconfig.json  utils.js
scripts/: add_evidence_types.py  add_type_annotations.py  add_type_hints.py  docker-entrypoint.sh  extract_clean_stage4.py  fix_imports.py  fix_indentation.py  fix_stage4_evidence.py  generate_config_docs.py  mcp_inspector_executor.py  run_cypher_migrations.py  run_mcp_inspector.sh  setup_mcp_client.sh  update_imports.py  update_nexusmind_references.py
scripts/profiling/: analyze_profile.py  profile_runner.py
server/: error-handler.js  index.js  logger.js  package-lock.json  package.json
src/adaptive_graph_of_thoughts/: __init__.py  app_setup.py  async_server.py  config.py  main.py  main_stdio.py  server_factory.py  validation.py
src/loguru-stubs/: __init__.pyi
tests/: CI.py  conftest.py  test_config_files.py  test_docs_index_md.py  test_mkdocs_config.py  test_performance.py  test_security.py
tests/setup_wizard/: test_cli.py  test_health.py
tests/unit/: test_app_setup.py  test_app_setup_actual.py  test_base_client.py  test_config.py  test_config_schema.py  test_exa_search_client.py  test_google_scholar_client.py  test_graph_elements.py  test_llm.py  test_neo4j_utils.py  test_pubmed_client.py  test_settings_yaml.py  test_vscode_utils.py
(+103 files in other folders)
