[project]
name = "adaptive-graph-of-thoughts"
description = "Adaptive Graph of Thoughts: Intelligent Scientific Reasoning through Graph-of-Thoughts MCP Server"
authors = [
    {name = "Adaptive Graph of Thoughts Development Team", email = "saptaswadey@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["adaptive-graph-of-thoughts", "got", "graph-of-thoughts", "mcp", "ai", "reasoning", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "networkx>=3.3,<4.0",
    "httpx>=0.28.0,<1.0",
    "python-dotenv>=1.0.1,<2.0",
    "PyYAML>=6.0.1,<7.0",
    "typer[all]>=0.12.3,<1.0",
    "loguru>=0.7.2,<1.0",
    "jinja2>=3.1.3,<4.0",
    "requests>=2.32.4,<3.0",
    "mcp>=1.2.0,<2.0",
    "jsonschema>=4.21.0,<5.0",
    "sse-starlette>=2.1.0,<3.0",
    "neo4j>=5.17.0,<6.0",
    "asyncpg>=0.30.0,<1.0",
    "cryptography>=44.0.1,<45.0",
    "bcrypt>=4.2.0,<5.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "prometheus-client>=0.21.0,<1.0",
    "structlog>=24.4.0,<25.0",
    "sentry-sdk[fastapi]>=2.17.0,<3.0",
    "pendulum>=3.1.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.4.0",
    "types-jsonschema>=4.21.0.20250518",
    "types-pyyaml>=6.0.12.20250516",
    "psutil>=6.0,<6.1",
]
security = [
    "bandit>=1.7.10",
    "safety>=3.2.8",
    "semgrep>=1.95.0",
]

[project.urls]
Repository = "https://github.com/SaptaDey/Adaptive-Graph-of-Thoughts-MCP"
Homepage = "https://github.com/SaptaDey/Adaptive-Graph-of-Thoughts-MCP"
"MCP Tools" = "https://github.com/SaptaDey/Adaptive-Graph-of-Thoughts-MCP-server/blob/main/config/mcp_tools_definition.json"
"Client Configurations" = "https://github.com/SaptaDey/Adaptive-Graph-of-Thoughts-MCP-server/tree/main/config/client_configurations"
"Smithery" = "https://smithery.ai/server/@SaptaDey/graph-of-thought-mcp"

[project.scripts]
mcp-server = "adaptive_graph_of_thoughts.main:main"
mcp-stdio = "adaptive_graph_of_thoughts.main_stdio:main"
setup-mcp-client = "adaptive_graph_of_thoughts.setup.client_setup:main"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ARG", "RUF"]
ignore = [
    "E501",
    "F401",
    "F403",
    "F405",
    "F841",
    "W292",
    "W293",
    "B008",
    "SIM102",
    "SIM117",
    "ARG002",
    "I001",
    "UP006",
    "UP007",
    "E741",
    "B904",
    "RUF013",
    "ARG001",
    "ARG005",
    "B017",
    "E701",
    "E402",
    "UP015",
    "UP024",
    "W291",
    "E401",
    "F811",
    "RUF100",
    "UP038",
    "UP041",
    "RUF005",
    "RUF022",
    "B905",
    "SIM105",
    "SIM118",
    "UP035",
    "UP037",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Start with this, can be made stricter later
# Avoid duplicate module errors when running on the src directory
explicit_package_bases = true
namespace_packages = true
# Add paths for mypy to check, typically your source directory
files = "src/adaptive_graph_of_thoughts"
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"] # Add src to pythonpath for tests
asyncio_mode = "auto"
# Add more options as needed, e.g., test file patterns
# python_files = "tests.py test_*.py *_tests.py"

[[tool.poetry.packages]]
include = "adaptive_graph_of_thoughts"
from = "src"
